ИТОГ: все файлы исправлены, тесты правильные